--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "colors": "^1.4.0",
+    "inquirer": "^8.2.5",
     "moment": "^2.29.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
